# particle-cmake

./: CMakeLists.txt  README.md  build.sh  build2.sh  conanfile.py  photon.profile
cmake/: particle-common.cmake
example-project/: CMakeLists.txt  README.md  build.sh  conanfile.txt
example-project-2/: CMakeLists.txt  Makefile  README.md  build.sh  conanfile.txt
example-project-2/app/: CMakeLists.txt  application.cpp
templates/: conanfile.txt
templates/basic/: CMakeLists.txt
